--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,112 +1,115 @@
 .site-header {
-  display: block;
-  @include breakpoint-down(smalldesktop) {
-    display: none;
-  }
+	background: $white;
+	display: block;
+	position: sticky;
+	top: 0;
+
+	@include breakpoint-down(smalldesktop) {
+		display: none;
+	}
 }
 
 .search-site {
-  @include flex-center-ver;
-  justify-content: space-between;
-  gap: 32px;
+	@include flex-center-ver;
+	justify-content: space-between;
+	gap: 32px;
 
-  > .field {
-    @include flex-center-ver;
-    gap: 16px;
-    padding: 6px 0;
-    border-bottom: 1px solid $brown-light-color;
-  }
+	> .field {
+		@include flex-center-ver;
+		gap: 16px;
+		padding: 6px 0;
+		border-bottom: 1px solid $brown-light-color;
+	}
 
-  > .icons {
-    @include flex-center-ver;
-    gap: 32px;
-  }
+	> .icons {
+		@include flex-center-ver;
+		gap: 32px;
+	}
 }
 
 .top-menu-wrapper {
-  border-bottom: 1px solid $brown-light-color;
+	border-bottom: 1px solid $brown-light-color;
 
-  .top-menu {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    height: 40px;
+	.top-menu {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		height: 40px;
 
-    > .slides {
-      @include flex-center;
-      width: 100%;
-      max-width: 430px;
-    }
+		> .slides {
+			@include flex-center;
+			width: 100%;
+			max-width: 430px;
+		}
 
-    > .actions {
-      @include flex-center-ver;
-      justify-content: right;
-      font-size: $fz-xs;
-      color: $brown-color;
-      gap: 32px;
-    }
+		> .actions {
+			@include flex-center-ver;
+			justify-content: right;
+			font-size: $fz-xs;
+			color: $brown-color;
+			gap: 32px;
+		}
 
-    > .actions > .action {
-      font-size: $fz-xs;
-      color: $brown-color;
-      text-transform: capitalize;
+		> .actions > .action {
+			font-size: $fz-xs;
+			color: $brown-color;
+			text-transform: capitalize;
 
-      &.-location {
-        @include flex-center-ver;
-        gap: 4px;
-      }
-    }
-  }
+			&.-location {
+				@include flex-center-ver;
+				gap: 4px;
+			}
+		}
+	}
 }
 
 .top-menu-slide {
-  @include flex-center;
-  font-size: $fz-xs;
-  line-height: $leading-sm;
-  width: 100%;
-  color: $primary-color;
-  > span {
-    text-transform: capitalize;
-    font-weight: 700;
-    margin-left: 4px;
-    text-decoration: underline;
-  }
+	@include flex-center;
+	font-size: $fz-xs;
+	line-height: $leading-sm;
+	width: 100%;
+	color: $primary-color;
+	> span {
+		text-transform: capitalize;
+		font-weight: 700;
+		margin-left: 4px;
+		text-decoration: underline;
+	}
 }
 
 .main-menu {
-  margin-block: $fz-xs;
-  @include flex-center-ver;
-  justify-content: space-between;
-  height: 40px;
-  font-family: $heading-font;
+	padding-block: 14px;
+	@include flex-center-ver;
+	justify-content: space-between;
+	font-family: $heading-font;
 
-  > .nav > .wrapper {
-    @include flex-center-ver;
-    gap: 32px;
-  }
+	> .nav > .wrapper {
+		@include flex-center-ver;
+		gap: 32px;
+	}
 }
 
 .main-menu-list {
-  @include flex-center-ver;
-  gap: 32px;
+	@include flex-center-ver;
+	gap: 32px;
 
-  > .item > .link {
-    position: relative;
-    font-size: $fz-sm;
-    font-weight: 400;
-    line-height: $leading-md;
-    color: $primary-color;
-    text-transform: uppercase;
-    &::before {
-      @include size(0, 2px);
-      content: "";
-      position: absolute;
-      background: $primary-color;
-      bottom: -5px;
-      transition: width 0.4s linear;
-    }
+	> .item > .link {
+		position: relative;
+		font-size: $fz-sm;
+		font-weight: 400;
+		line-height: $leading-md;
+		color: $primary-color;
+		text-transform: uppercase;
+		&::before {
+			@include size(0, 2px);
+			content: '';
+			position: absolute;
+			background: $primary-color;
+			bottom: -5px;
+			transition: width 0.4s linear;
+		}
 
-    &:hover::before {
-      width: 100%;
-    }
-  }
+		&:hover::before {
+			width: 100%;
+		}
+	}
 }
