--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,8 +1,8 @@
-@import "swiper/css/bundle";
+@import 'swiper/css/bundle';
 
-@import "../scss/abstracts";
-@import "../scss/base";
-@import "../scss/layout";
-@import "../scss/components";
-@import "../scss/plugins";
-@import "../scss/pages";
+@import '../scss/abstracts';
+@import '../scss/base';
+@import '../scss/layout';
+@import '../scss/components';
+@import '../scss/plugins';
+@import '../scss/pages';
