--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -14,6 +14,7 @@ $brown-light-color: #e9e9e9;
 
 $white: #fff;
 $black: #000;
+$dark: #333333;
 
 // font-size
 $fz-xs: 12px;
@@ -42,9 +43,9 @@ $leading-button: $leading-md;
 
 // * map
 $font-size: (
-  xs: $fz-xs,
-  sm: $fz-sm,
-  base: $fz-base,
-  xl: $fz-xl,
-  2xl: $fz-2xl,
+	xs: $fz-xs,
+	sm: $fz-sm,
+	base: $fz-base,
+	xl: $fz-xl,
+	2xl: $fz-2xl,
 );
