--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -5,6 +5,7 @@
 	}
 	> .title {
 		margin-block: 50px;
+		padding-inline: 20px;
 		font-size: $fz-2xl;
 		color: $dark;
 		font-family: $heading-font;
