--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -11,6 +11,8 @@ $success-light-color: #b2b2b2;
 
 $brown-color: #6e6e6e;
 $brown-light-color: #e9e9e9;
+$brown-light-color: #e9e9e9;
+$brown-white: #f3f3f3;
 
 $white: #fff;
 $black: #000;
