setup redux react query axios

--- a/src/scss/plugins/_swiper.scss
+++ b/src/scss/plugins/_swiper.scss
@@ -1,6 +1,10 @@
 .swiper-button-prev::after,
 .swiper-button-next::after {
-  color: $primary-color !important;
-  font-size: $fz-sm !important;
-  font-weight: 900;
+	color: $primary-color !important;
+	font-size: $fz-sm !important;
+	font-weight: 900;
+}
+
+.swiper-list {
+	padding-inline: 30px !important;
 }
