--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -14,6 +14,8 @@ $brown-light-color: #e9e9e9;
 $brown-light-color: #e9e9e9;
 $brown-white: #f3f3f3;
 
+$skin-light: #f7f2e5;
+
 $white: #fff;
 $black: #000;
 $dark: #333333;
