--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -69,7 +69,7 @@
 .footer-wrapper {
 	> .menu-list {
 		display: flex;
-		justify-content: start;
+		justify-content: flex-start;
 		flex-wrap: wrap;
 		gap: 100px;
 		height: 100%;
