--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,3 +1,4 @@
-@import "./header.scss";
-@import "./header-mobile.scss";
-@import "./footer.scss";
+@import './header.scss';
+@import './header-mobile.scss';
+@import './footer.scss';
+@import './bag-cart.scss';
