--- a/src/scss/pages/_page-products.scss
+++ b/src/scss/pages/_page-products.scss
@@ -1,15 +1,55 @@
 .site-categories {
 	> .content {
+		@include flex-center;
+		gap: 4px;
+		color: $black;
+
 		> .sub-content {
+			font-size: $fz-xs;
+			color: $brow-light-75-color;
+		}
+		> .content-title {
+			font-size: $fz-sm;
+			font-weight: 500;
+			text-decoration: underline;
 		}
 	}
 	> .title {
+		margin-top: 12px;
+		padding-bottom: 56px;
+		font-family: $heading-font;
+		font-size: $fz-2xl;
+		line-height: $leading-lg;
+		font-weight: 800;
+		@include breakpoint-down(smalldesktop) {
+			padding-bottom: 28px;
+			margin-top: 6px;
+			font-size: $fz-xl;
+		}
+		@include breakpoint-down(phone) {
+			padding-bottom: 16px;
+			font-size: $fz-lg;
+		}
 	}
 }
 
-.swiper-categories {
-	> .category-item {
-		> .content {
+.category-item {
+	@include flex-column;
+	gap: 12px;
+	margin-bottom: 30px;
+	@include breakpoint-down(smalldesktop) {
+		gap: 6px;
+		margin-bottom: 20px;
+	}
+	> .category-link {
+		-top: 20px;
+		color: $black;
+		font-size: $fz-base;
+		line-height: $leading-md;
+		font-weight: $fw-bold;
+		@include breakpoint-down(smalldesktop) {
+			font-size: $fz-sm;
+			line-height: $leading-sm;
 		}
 	}
 }
