--- a/src/scss/abstracts/_helper.scss
+++ b/src/scss/abstracts/_helper.scss
@@ -22,6 +22,9 @@
 ._color-success-light {
 	color: $success-light-color;
 }
+._text-underline {
+	text-decoration: underline;
+}
 
 // font size
 ._fz {
@@ -48,3 +51,5 @@
 ._border-top {
 	border-top: 1px solid $brown-light-color;
 }
+
+// z-index
