--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -10,7 +10,7 @@ $success-color: #006766;
 $success-light-color: #b2b2b2;
 
 $brown-color: #6e6e6e;
-$brown-light-color: #e9e9e9;
+$brow-light-75-color: #757575;
 $brown-light-color: #e9e9e9;
 $brown-white: #f3f3f3;
 
@@ -43,7 +43,6 @@ $leading-lg: 32px;
 
 $leading-button: $leading-md;
 // letter spacing
-// gutter
 
 // * map
 $font-size: (
@@ -53,3 +52,8 @@ $font-size: (
 	xl: $fz-xl,
 	2xl: $fz-2xl,
 );
+
+// * sizing
+$cart-drawer-width: 450px;
+$top-menu-height: 40px;
+$main-menu-height: 60px;
