--- a/src/scss/base/global.scss
+++ b/src/scss/base/global.scss
@@ -1,24 +1,28 @@
 .container {
-  width: 100%;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-inline: 20px;
+	width: 100%;
+	max-width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-inline: 20px;
 }
 
 img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 li {
-  list-style: none;
+	list-style: none;
 }
 
 input {
-  outline: none;
-  border: none;
+	outline: none;
+	border: none;
+}
+
+svg {
+	cursor: pointer;
 }
