update product page

--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -56,4 +56,5 @@ $font-size: (
 // * sizing
 $cart-drawer-width: 500px;
 $top-menu-height: 40px;
+$top-filter-height: 40px;
 $main-menu-height: 60px;
