--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -13,6 +13,7 @@ $brown-color: #6e6e6e;
 $brow-light-75-color: #757575;
 $brown-light-color: #e9e9e9;
 $brown-white: #f3f3f3;
+$brown-c9: #c9c9c9;
 
 $skin-light: #f7f2e5;
 
