--- a/src/scss/pages/_page-product-detail.scss
+++ b/src/scss/pages/_page-product-detail.scss
@@ -1,50 +1,34 @@
 .detail {
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	gap: 40px;
-	margin-top: 5px;
-
-	.detail-slide {
-		width: 60%;
-
-		> .swiper {
-			width: 300px;
-			height: 300px;
-		}
-
-		> .swiper-slide {
-			text-align: center;
-			font-size: 18px;
-			background: #fff;
-
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-
-		> .swiper-slide {
-			> img {
-				display: block;
-				width: 20px;
-				height: 40px;
-				object-fit: cover;
-			}
-		}
+	display: grid;
+	grid-template-columns: 1.5fr 1fr;
+	position: relative;
+	padding-bottom: 60px;
+	gap: 30px;
+	border-bottom: 1px solid $brown-light-color;
+	@include breakpoint-down(phone) {
+		@include flex-column;
+		gap: 12px;
+		padding-bottom: 0;
+		border-bottom: unset;
 	}
-
 	.detail-info {
-		width: 40%;
-
 		.detail-title {
 			width: 100%;
 			padding-bottom: 16px;
 			border-bottom: 1px solid $brown-light-color;
+			> p {
+				color: $brown-color;
+				font-size: $fz-xs;
+				line-height: $leading-sm;
+				padding-bottom: 6px;
+				font-weight: $fw-bold;
+			}
 			h3 {
+				font-family: $heading-font;
 				font-size: $fz-base;
 				text-transform: uppercase;
 				font-weight: 800;
-				margin-bottom: 10px;
+				margin-bottom: 8px;
 			}
 
 			.detail-icons {
@@ -57,7 +41,7 @@
 					display: flex;
 					align-items: center;
 					justify-content: center;
-					gap: 2px;
+					gap: 4px;
 				}
 
 				span {
@@ -72,7 +56,7 @@
 				font-size: 20px;
 				line-height: $leading-md;
 				font-weight: $fw-bold;
-				padding: 8px 0;
+				padding: 8px 0 16px 0;
 			}
 
 			.detail-content {
@@ -86,10 +70,98 @@
 	}
 }
 
+.gallery-product-detail {
+	height: 740px !important;
+	@include breakpoint-down(phone) {
+		height: auto !important;
+	}
+}
+.gallery-product-detail-item {
+	width: 100% !important;
+	height: 100% !important;
+	max-height: 120px !important;
+	max-width: 120px !important;
+}
+
+.detail-slide {
+	height: 100%;
+	max-height: 740px;
+	display: flex;
+	align-items: flex-start;
+	gap: 20px;
+	@include breakpoint-down(phone) {
+		display: flex;
+		flex-direction: column-reverse;
+	}
+}
+
+.main-slide {
+	width: 100% !important;
+	max-width: 680px !important;
+	@include breakpoint-down(mediumdesktop) {
+		max-width: 650px !important;
+	}
+}
+
+.main-swiper-slide {
+	> .item-main-slide {
+		height: 740px;
+		@include breakpoint-down(phone) {
+			height: 580px;
+		}
+	}
+}
+
+.main-slide-image-product-detail {
+	// width: 600px !important;
+	// height: 740px !important;
+}
+
+.gallery-product-detail-item {
+	&.swiper-slide-thumb-active {
+		border: 2px solid $secondary-color;
+	}
+}
+
+.swiper-thumbsImages {
+	position: relative;
+}
+
+.product-detail-actions {
+	> .action.-prev {
+		@include flex-center;
+		width: 100%;
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 1000;
+		height: 1.7vw;
+		border: none;
+		background-color: #0009;
+		color: $white;
+	}
+	> .action.-next {
+		@include flex-center;
+		width: 100%;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		z-index: 1000;
+		height: 1.7vw;
+		border: none;
+		background-color: #0009;
+		color: $white;
+	}
+}
+
 .detail-size {
-	padding-top: 12px;
+	padding-block: 20px;
 	@include flex-column;
 	gap: 12px;
+	@include breakpoint-down(phone) {
+		padding-block: 10px;
+		gap: 4px;
+	}
 	> .title {
 		font-size: $fz-sm;
 		line-height: $leading-sm;
@@ -118,10 +190,11 @@
 .detail-quantity {
 	@include flex-center-ver;
 	justify-content: space-between;
-	padding-top: 12px;
+	padding-block: 24px;
 	border-top: 1px solid $brown-white;
-	margin-top: 12px;
-
+	@include breakpoint-down(phone) {
+		padding-block: 12px;
+	}
 	> .title {
 		font-size: $fz-sm;
 		line-height: $leading-sm;
@@ -140,14 +213,16 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	gap: 16px;
-	margin-top: 12px;
-	padding-top: 12px;
+	padding-block: 24px;
 	border-top: 1px solid $brown-white;
-
+	@include breakpoint-down(phone) {
+		padding-block: 12px;
+	}
 	> .item {
-		border: 2px solid $brown-c9;
+		border: 1.5px solid $brown-c9;
 		border-radius: 6px;
 		padding: 14px 16px;
+		cursor: pointer;
 	}
 	> .item {
 		> .title {
@@ -165,21 +240,31 @@
 	}
 }
 
-.active-payment-method {
-	border: 2px solid $black;
+.description {
+	> .title {
+		margin-top: 20px;
+		font-size: $fz-sm;
+		line-height: $leading-sm;
+		color: $black;
+		font-weight: $fw-bold;
+		@include breakpoint-down(phone) {
+			margin-top: 10px;
+		}
+	}
 }
 
 .detail-disable {
-	border-bottom: 0.1em solid $brown-color;
-
 	> .item {
+		cursor: pointer;
 		font-size: $fz-sm;
-		margin-top: 16px;
 		color: $brown-color;
+		text-decoration: underline;
 	}
 }
 
 .detail-click {
+	position: sticky;
+	top: 140px;
 	@include flex-center-ver;
 	background-color: $secondary-color;
 	width: full;
@@ -204,47 +289,23 @@
 	@include flex-center-ver;
 	gap: 8px;
 	margin-top: 16px;
-	> .icon {
-		margin-bottom: 2px;
-		height: 14px;
-		width: 16px;
-	}
-
-	> span {
-		font-size: $fz-sm;
-		font-weight: 700;
-	}
+	font-size: $fz-xs;
+	font-weight: $fw-bold;
 
 	p {
-		font-size: $fz-sm;
-	}
-
-	> .icons {
-		cursor: pointer;
+		color: $brow-light-75-color;
 	}
 }
 
 .detail-description {
 	color: #000;
-	font-size: 20px;
-	line-height: $leading-lg;
-	margin-top: 16px;
-
-	> ul {
-		align-items: center;
-		list-style-type: disc;
-
-		li::before {
-			content: '\2022';
-			margin-right: 0.5em;
-			color: #000;
-		}
-	}
+	font-size: $fz-sm;
+	line-height: $leading-md;
+	margin-block: 8px;
 }
 
 .detail-nature {
 	font-size: $fz-sm;
-	margin-top: 16px;
 	color: $brown-color;
 
 	> .items {
@@ -400,7 +461,7 @@
 	}
 }
 
-.size {
+.size-comment {
 	margin: 20px 0;
 	padding-bottom: 20px;
 	border-bottom: 1px solid $brown-light-color;
