--- a/src/scss/pages/_page-product-detail.scss
+++ b/src/scss/pages/_page-product-detail.scss
@@ -385,3 +385,95 @@
 		margin-top: 8px;
 	}
 }
+
+// comments
+
+.comment-wrapper {
+	margin-block: 120px;
+	padding-inline: 60px;
+	@include breakpoint-down(phone) {
+		margin-block: 60px;
+		padding-inline: 30px;
+	}
+	> .title {
+		font-size: $fz-base;
+		line-height: $leading-md;
+		font-weight: $fw-bold;
+	}
+	> .qty-comment {
+		font-size: $fz-xs;
+		color: $black;
+		line-height: $leading-sm;
+		margin-bottom: 40px;
+	}
+}
+
+.write-review {
+	@include flex-column;
+	gap: 12px;
+	padding-bottom: 40px;
+	@include breakpoint-down(phone) {
+		padding-bottom: 20px;
+	}
+	> .label {
+		font-size: $fz-xs;
+		color: $black;
+		line-height: $leading-sm;
+	}
+	> .field {
+		padding: 8px;
+		height: 100%;
+		width: 100%;
+		min-height: 100px;
+	}
+}
+
+.comment-lists {
+	@include flex-column;
+	gap: 40px;
+	margin-top: 40px;
+	@include breakpoint-down(phone) {
+		gap: 20px;
+		margin-top: 20px;
+	}
+}
+
+.comment-item {
+	padding-bottom: 40px;
+	@include breakpoint-down(phone) {
+		padding-bottom: 20px;
+	}
+	> .title {
+		$dark-color-51: rgb(51, 51, 51);
+		color: $dark-color-51;
+		font-size: $fz-sm;
+		line-height: $leading-md;
+		margin: 0px 0px 10px;
+		font-weight: $fw-bold;
+	}
+	> .name {
+		@include flex-center-ver;
+		gap: 4px;
+		font-size: $fz-xs;
+		font-weight: $fw-bold;
+		> .icon {
+			width: 20px;
+			height: 20px;
+			color: #5ecbd5;
+		}
+	}
+	> .date {
+		$brow-color-110: rgb(110, 110, 110);
+		color: $brow-color-110;
+		font-size: $fz-xs;
+		line-height: $leading-sm;
+	}
+	> .content {
+		font-size: $fz-xs;
+		line-height: $leading-sm;
+		color: $black;
+		width: 100%;
+		max-width: 580px;
+		padding-block: 10px;
+	}
+}
