--- a/src/scss/pages/_page-product-detail.scss
+++ b/src/scss/pages/_page-product-detail.scss
@@ -421,10 +421,16 @@
 		line-height: $leading-sm;
 	}
 	> .field {
+		$rounded: 2px;
 		padding: 8px;
 		height: 100%;
 		width: 100%;
 		min-height: 100px;
+		border-radius: $rounded;
+		border: 1.2px solid $secondary-color;
+		&:focus {
+			border: 2px solid $secondary-color;
+		}
 	}
 }
 
