--- a/src/scss/abstracts/_helper.scss
+++ b/src/scss/abstracts/_helper.scss
@@ -56,3 +56,11 @@
 	position: sticky;
 	top: 0;
 }
+
+.error-message {
+	font-family: $heading-font;
+	font-size: $fz-xs;
+	line-height: $leading-sm;
+	font-weight: $fw-normal;
+	color: $error-color;
+}
